Fixed background on Safari

--- a/public/site.css
+++ b/public/site.css
@@ -7,6 +7,9 @@ body {
 	background-position: top center;
 	background-attachment: fixed;
 	background-size: cover;
+	-o-background-size: cover;
+	-moz-background-size: cover;
+	-webkit-background-size: cover;
 }
 
 * {
